tests/query_errors/window_mutate_event/error.txt
Error: 
    5 |   let event = 42;
      |       ^^^^^^^^^^ Can not assign to `event` here